# raku-ukr-mod-data

./: .gitignore  Akefile  DESCRIPTION  Dockerfile  META6.json  README.md  data.Dockerfile  package-lock.json  package.json  pyproject.toml
assets/: README.md
raw-pages/: The total combat losses of the enemy from 24.02 to 01.06 | Міноборони.html  The total combat losses of the enemy from 24.02 to 01.08 Міноборони  The total combat losses of the enemy from 24.02 to 02.06 | Міноборони.html  The total combat losses of the enemy from 24.02 to 02.08 Міноборони  The total combat losses of the enemy from 24.02 to 03.06 | Міноборони.html  The total combat losses of the enemy from 24.02 to 04.08 Міноборони  The total combat losses of the enemy from 24.02 to 05.06 | Міноборони.html  The total combat losses of the enemy from 24.02 to 05.08 Міноборони  The total combat losses of the enemy from 24.02 to 06.08 Міноборони  The total combat losses of the enemy from 24.02 to 07.08 Міноборони  The total combat losses of the enemy from 24.02 to 08.08 Міноборони  The total combat losses of the enemy from 24.02 to 10.05 | Міноборони.html  The total combat losses of the enemy from 24.02 to 10.08 Міноборони  The total combat losses of the enemy from 24.02 to 11.05 | Міноборони.html  The total combat losses of the enemy from 24.02 to 11.07 | Міноборони.html  The total combat losses of the enemy from 24.02 to 11.08 Міноборони  The total combat losses of the enemy from 24.02 to 12.04 | Міноборони.html  (+99 more)
raw-pages-ukr/: combat-losses-to-07.08 | UKR.html
resources/: ukr-mod-data.csv  (+5 more)
(+26 files in other folders)
