[tool.poetry]
name = "raku-ukr-mod-data"
version = "0.1.0"
description = ""
authors = ["JJ Merelo <jjmerelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
