[tool.poetry]
name = "ukr-mod-data"
version = "0.1.0"
description = "Dowloader for Ukraine MoD data on enemy losses"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
undetected-chromedriver = "^3.1.5"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = 'ukr_mod_data.__init__:download_today'